Deleted the stack evolution from cases 2, 3, 6 and included bibliography

--- a/docs/thecoffeeserver/The Coffee Server - Report.tex
+++ b/docs/thecoffeeserver/The Coffee Server - Report.tex
@@ -19,7 +19,8 @@
 \usepackage{url}
 \usepackage{epsfig}
 \usepackage{lscape}
-\usepackage{multicol}\usepackage{colortbl}
+\usepackage{multicol}
+\usepackage{colortbl}
 
 \usepackage[left=1.7cm,top=2.7cm,right=1.7cm,bottom=2.7cm]{geometry}
 
@@ -576,23 +577,28 @@ In general, due to the nature of the STRIPS algorithm, this program does not fin
 %\thispagestyle{plain}
 \addcontentsline{toc}{section}{References}\sectionmark{References}
 \begin{thebibliography}{25}
-
-\bibitem{problemdefinition} Problem definition, \url{https://moodle.urv.cat/moodle/pluginfile.php/2303642/mod_resource/content/4/PlannerExercise16-17.pdf}
-
-\bibitem{par} PAR course \url{https://moodle.urv.cat/docnet/guia_docent/index.php?centre=17&ensenyament=1768&assignatura=17685204&font=12&any_academic=2016_17&modalitat=p}
-
-\bibitem{strips} STRIPS paper \url{http://ai.stanford.edu/~nilsson/OnlinePubs-Nils/PublishedPapers/strips.pdf}
-
-\bibitem{java} JAVA
-
-\bibitem{gps} Ernst, G. and .~4ewell, A. GPS: A Case Study in Generality and Problem Solving. ACM
-Monograph Series. Academic Press, New York, New York, 1969
-
-\bibitem{notes} Notes of the PAR course
-
-
-
+	
+	
+	\bibitem{problemdefinition} PAR course. \textsl{MIA-MEISISI: Practical Exercise 1: Planner implementation}. Universitat Rovira i Virgili (URV), Tarragona, Spain, 2016. \url{https://moodle.urv.cat/moodle/pluginfile.php/2303642/mod_resource/content/4/PlannerExercise16-17.pdf}
+	
+	
+	\bibitem{par} PAR course. \textsl{Guia docent 2016\_17}. Universitat Rovira i Virgili (URV), Tarragona, Spain, 2016. \url{https://moodle.urv.cat/docnet/guia_docent/index.php?centre=17&ensenyament=1768&assignatura=17685204&font=12&any_academic=2016_17&modalitat=p}
+	
+	
+	\bibitem{strips} Richard E. Fikes and Nils J. Nilsson. \textsl{STRIPS: A New Approach to the
+		Application of Theorem Proving to Problem Solving}. Stanford Research Institute, Menlo Park, California, 1971. \url{http://ai.stanford.edu/~nilsson/OnlinePubs-Nils/PublishedPapers/strips.pdf}
+	
+	
+	\bibitem{java} JAVA. \url{https://www.java.com/}
+	
+	
+	\bibitem{gps} Ernst, G. and Newell, A. \textsl{GPS: A Case Study in Generality and Problem Solving}. ACM Monograph Series. Academic Press, New York, New York, 1969.
+	
+	
+	\bibitem{notes} PAR course. \textsl{Lecture 3-3 Algorithm of the linear planner with a stack of objectives}. Universitat Rovira i Virgili (URV), Tarragona, Spain, 2016. \url{https://www.youtube.com/watch?v=8Zt3_EFdtPw}
+	
 \end{thebibliography}
+
 
 
 %--------------------------------------------------------------------------------------------------
