removed unused package dependences

--- a/docs/thecoffeeserver/The Coffee Server - Report.tex
+++ b/docs/thecoffeeserver/The Coffee Server - Report.tex
@@ -7,9 +7,9 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{pgfplots}
-\usepackage{subfigure}
-\usepackage{caption}
-\usepackage{subcaption}
+%\usepackage{subfigure}
+%\usepackage{caption}
+%\usepackage{subcaption}
 \usepackage{cancel}
 \usepackage{feynmf}
 \usepackage{forest}
